# oscilloscope-viewer

./: .gitignore  README.md  build_exe.cmd  main.py  oscilloscope.py  pyproject.toml
oscilloscope_viewer/: __init__.py  app.py  models.py  readers.py
tests/: test_app.py  test_readers.py
